--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -3,7 +3,7 @@ project(server C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(server server.c server_utils/hawk-packets.c server_utils/hawk-packets.h server_utils/hawk-actions.c server_utils/hawk-actions.h server_utils/string-utils.c server_utils/string-utils.h)
+add_executable(server main.c server_utils/hawk-packets.c server_utils/hawk-packets.h server_utils/hawk-actions.c server_utils/hawk-actions.h server_utils/string-utils.c server_utils/string-utils.h server_utils/connection.h server_utils/connection.c drone_utils/state.c drone_utils/state.h)
 
 set(CMAKE_USE_PTHREADS_INIT true)
 set(CMAKE_USE_PTHREADS_INIT ON)
