--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -3,11 +3,11 @@ project(server C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(server main.c server_utils/hawk-packets.c server_utils/hawk-packets.h server_utils/hawk-actions.c server_utils/hawk-actions.h server_utils/string-utils.c server_utils/string-utils.h server_utils/connection.h server_utils/connection.c drone_utils/state.c drone_utils/state.h)
+add_executable(server main.c network_utils/hawk-packets.c network_utils/hawk-packets.h network_utils/hawk-actions.c network_utils/hawk-actions.h network_utils/string-utils.c network_utils/string-utils.h network_utils/connection.h network_utils/connection.c drone_utils/state.c drone_utils/state.h)
 
 set(CMAKE_USE_PTHREADS_INIT true)
 set(CMAKE_USE_PTHREADS_INIT ON)
-SET(CMAKE_C_FLAGS -pthread)
+SET(CMAKE_C_FLAGS "-pthread ${CMAKE_C_FLAGS}")
 
 find_package(Threads REQUIRED)
 find_package(OpenSSL REQUIRED)
