--- a/remote/android/app/src/main/AndroidManifest.xml
+++ b/remote/android/app/src/main/AndroidManifest.xml
@@ -10,27 +10,33 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".SplashActivity"
             android:label="@string/title_activity_splash"
+            android:screenOrientation="landscape"
             android:theme="@style/AppTheme.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".MainActivity"
+            android:label="MainActivity"
+            android:screenOrientation="landscape"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+
         <activity
             android:name=".MenuActivity"
             android:label="@string/title_activity_menu"
+            android:screenOrientation="landscape"
             android:theme="@android:style/Theme.Dialog">
         </activity>
-        <activity
-            android:name=".MainActivity"
-            android:screenOrientation="landscape"
-            android:theme="@style/AppTheme">
 
-        </activity>
     </application>
 
 </manifest>
