--- a/.gitignore
+++ b/.gitignore
@@ -88,6 +88,7 @@ dkms.conf
 .idea/**/dictionaries
 .idea/**/shelf
 
+
 # Generated files
 .idea/**/contentModel.xml
 
@@ -165,4 +166,5 @@ fabric.properties
 .idea/**/markdown-navigator.xml
 .idea/**/markdown-navigator/
 
-# End of https://www.gitignore.io/api/c,c++,clion
+# MultiwiiConf
+drone/arduino/MultiWii_2_4/MultiWiiConf
