Begin TCP Server response

--- a/drone/rpi/CMakeLists.txt
+++ b/drone/rpi/CMakeLists.txt
@@ -3,7 +3,7 @@ project(server C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(server main.c network_utils/hawk-packets.c network_utils/hawk-packets.h network_utils/hawk-actions.c network_utils/hawk-actions.h network_utils/string-utils.c network_utils/string-utils.h network_utils/connection.h network_utils/connection.c drone_utils/state.c drone_utils/state.h drone_utils/ppmer.c drone_utils/ppmer.h)
+add_executable(server main.c network_utils/hawk-packets.c network_utils/hawk-packets.h network_utils/hawk-actions.c network_utils/hawk-actions.h network_utils/string-utils.c network_utils/string-utils.h network_utils/connection.h network_utils/connection.c drone_utils/state.c drone_utils/state.h drone_utils/ppmer.c drone_utils/ppmer.h peripheral_utils/i2c_reader.c peripheral_utils/i2c_reader.h)
 
 set(CMAKE_USE_PTHREADS_INIT true)
 set(CMAKE_USE_PTHREADS_INIT ON)
